# pdf-probe

./: .gitignore  README.md  pdf_probe.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
pdf_probe/: __init__.py  __main__.py  probe.py
prompts/: README.md
tests/: __init__.py  test_probe.py
